--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,150 @@
-python-dotenv-0.21.1
-flask-blueprint-1.3.0
-flask_mysqldb-1.0.1
-mysql_connector-2.2.9
-flask-mysql-connector-1.1.0
-Flask-JSON-0.3.5
-datatypes-date-time-1.0.0a2
-logging4-0.0.2
+falcon==3.1.0
+fastapi==0.78.0
+fastjsonschema==2.16.1
+fastprogress==1.0.0
+fasttext==0.9.2
+feedfinder2==0.0.4
+feedgenerator==2.0.0
+feedparser==6.0.8
+filebrowser-safe==1.1.1
+filelock==3.4.2
+Fiona==1.8.21
+Flask==2.1.2
+Flask-Admin==1.6.0
+Flask-Babel==2.0.0
+Flask-Bcrypt==1.0.1
+flask-blueprint==1.3.0
+Flask-Bootstrap==3.3.7.1
+Flask-Compress==1.12
+Flask-HTTPAuth==4.6.0
+Flask-JSON==0.3.5
+Flask-Login==0.6.1
+flask-mysql-connector==1.1.0
+Flask-MySQLdb==1.0.1
+Flask-RESTful==0.3.9
+Flask-SQLAlchemy==2.5.1
+Flask-SSLify==0.1.5
+Flask-WTF==1.0.1
+flatbuffers==1.12
+fonttools==4.28.5
+formulaic==0.3.4
+fsspec==2021.11.1
+future==0.18.2
+gast==0.4.0
+Genshi==0.7.7
+geographiclib==1.52
+geopy==2.2.0
+gevent==21.12.0
+gitdb==4.0.9
+gitdb2==4.0.2
+GitPython==3.1.27
+glpk==0.4.6
+gmplot==1.4.1
+gmpy==1.17
+google-api-core==2.8.0
+google-api-python-client==2.48.0
+google-auth==2.6.6
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+googleapis-common-protos==1.56.1
+graphviz==0.20
+grappelli-safe==1.1.1
+greenlet==1.1.2
+grokcore.component==3.2.0
+grpcio==1.46.1
+h11==0.13.0
+h2==4.1.0
+h5py==3.6.0
+hpack==4.0.0
+html5lib==1.1
+httplib2==0.20.4
+humanize==4.1.0
+hupper==1.10.3
+hyperframe==6.0.1
+hyperlink==21.0.0
+idna==3.3
+imageio==2.13.5
+imageio-ffmpeg==0.4.7
+imagesize==1.3.0
+IMAPClient==2.2.0
+importlib-metadata==4.11.3
+importlib-resources==5.7.1
+importscan==0.2
+incremental==21.3.0
+inflection==0.5.1
+iniconfig==1.1.1
+interchange==2021.0.4
+interface-meta==1.3.0
+ipykernel==6.15.1
+ipyparallel==8.3.0
+ipython==8.3.0
+ipython-genutils==0.2.0
+ipywidgets==7.7.0
+isodate==0.6.1
+isort==5.10.1
+itemadapter==0.6.0
+itemloaders==1.0.4
+itsdangerous==2.1.2
+jaraco.classes==3.2.1
+jaraco.collections==3.5.1
+jaraco.context==4.1.1
+jaraco.functools==3.5.0
+jaraco.text==3.7.0
+jdcal==1.4.1
+jedi==0.18.1
+jellyfish==0.9.0
+jieba3k==0.35.1
+Jinja2==3.1.2
+jmespath==1.0.0
+joblib==1.1.0
+jsonschema==4.7.2
+jupyter==1.0.0
+jupyter-client==7.3.4
+jupyter-console==6.4.4
+jupyter-core==4.11.1
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==1.1.1
+kaleido==0.2.1
+keras==2.9.0
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.2
+lark-parser==0.12.0
+libclang==14.0.1
+lifelines==0.27.0
+llvmlite==0.38.0
+locket==0.2.1
+logging4==0.0.2
+lxml==4.7.1
+Mako==1.2.0
+Markdown==3.3.7
+MarkupSafe==2.1.1
+martian==1.5
+matplotlib==3.5.2
+matplotlib-inline==0.1.3
+mechanize==0.4.8
+memory-profiler==0.60.0
+mglearn==0.1.9
+mimerender==0.6.0
+mistune==0.8.4
+mock==4.0.3
+monotonic==1.6
+more-itertools==8.13.0
+morepath==0.19
+mots-vides==2015.5.11
+mpmath==1.2.1
+msoffcrypto-tool==5.0.0
+multipart==0.2.4
+munch==2.5.0
+mypy-extensions==0.4.3
+mysql-connector==2.2.9
+mysql-connector-python==8.0.29
+mysqlclient==2.1.0
+nbclient==0.6.6
+nbconvert==6.5.0
+nbformat==5.4.0
+nbstripout==0.5.0
+ndg-httpsclient==0.5.1
+neo4j==4.4.3
+neobolt==1.7.17
